--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 --- #YAML:1.0
 name: Apache2::WebApp::Plugin::Filters
 abstract: Common methods for filtering HTTP request parameters.
-version: 0.01
+version: 0.02
 author:
   - Marc S. Brooks <mbrooks@cpan.org>
 license: perl and artistic
@@ -12,7 +12,7 @@ requires:
   Params::Validate: 0
 build_requires:
   Apache::Test: 0
-resource:
+resources:
   license: http://dev.perl.org/licenses/
 meta-spec:
   version: 1.4
