--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,13 @@
 --- #YAML:1.0
 name: Apache2::WebApp::Plugin::Filters
 abstract: Common methods for filtering HTTP request parameters.
-version: 0.07
+version: 0.08
 author:
   - Marc S. Brooks <mbrooks@cpan.org>
-license: perl and artistic
+license: perl
 distribution_type: module
 requires:
-  Apache2::WebApp: 0.21
+  Apache2::WebApp: 0.38
   HTML::StripScripts::Parser: 1.02
   Params::Validate: 0
 build_requires:
